@@ -161,14 +161,6 @@ Set the image resolution of the source or device. The actual resolution used may
 Default is "384x288".
 
 .TP
-\fB\-\-list\-framesizes\fR
-Lists the supported resolutions for the selected source.
-
-.TP
-\fB\-\-list\-framerates\fR
-Lists the supported frame rates for the selected source and resolution.
-
-.TP
 \fB\-F\fR, \fB\-\-frames\fR \fI<number>\fR
 Set the number of frames to capture. More frames mean less noise in the final image, however capture times will be longer and moving objects may appear blurred.
 .IP
